# ecom-ops-automation-system

./: .dockerignore  .editorconfig  .env.docker  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  DEPLOY.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  PUSH_INSTRUCTIONS.md  README.md  SECURITY.md  alembic.ini  audit_log.jsonl  docker-compose.backup.yml  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.staging.yml  docker-compose.yml  ecommerce_ops.db  pyproject.toml  requirements.txt  ruff.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd-staging.yml  cd.yml  ci.yml  deploy-staging.yml  docker-publish.yml  load-test.yml  release.yml  security.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_composite_indexes.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/hooks/: useAgentStatus.ts  useAnalytics.ts  useApprovalQueue.ts  useAuditLog.ts  useAuth.ts  useSettings.ts  useWebSocket.ts
dashboard/src/pages/: Analytics.tsx  AuditLog.tsx  Dashboard.tsx  Login.tsx  Settings.tsx
dashboard/src/store/: uiStore.ts
dashboard/src/types/: action.ts  agent.ts  audit.ts
dashboard/src/utils/: formatters.ts  riskColors.ts
demo_data/: seed.json
docs/: API.md  DEPLOYMENT.md  PERFORMANCE.md
ecommerce_ops/: cli.py  config.py
ecommerce_ops/agents/: _base.py  cost_tracker.py  factory.py  fraud.py  fraud_llm.py  inventory.py  inventory_llm.py  marketing.py  marketing_llm.py  message_bus.py  pricing.py  reflection.py  reviews.py
ecommerce_ops/agents/cart_recovery/: discounts.py  strategy.py
ecommerce_ops/agents/customer_support/: __init__.py  models.py
ecommerce_ops/api/: app.py  auth.py  demo.py  memory.py  metrics.py  middleware.py  observability.py  security.py  shopify.py  versioning.py  ws.py
ecommerce_ops/connectors/: competitor_scraper.py  shopify.py
ecommerce_ops/connectors/shopify/: models.py  oauth.py  sync.py
ecommerce_ops/demo/: helpers.py  seed_data.py
ecommerce_ops/digest/: builder.py
ecommerce_ops/ecommerce_ops/: .env.docker  .env.example  .gitignore  CREDENTIAL_ROTATION.md  docker-compose.override.yml  docker-compose.yml  utils.py
ecommerce_ops/ecommerce_ops/.github/: dependabot.yml
ecommerce_ops/ecommerce_ops/agents/: fraud_llm.py  inventory_llm.py  pricing.py  reviews.py
ecommerce_ops/ecommerce_ops/api/: app.py  cart_recovery.py  customer_support.py  demo.py  memory.py  middleware.py  observability.py  security.py
ecommerce_ops/ecommerce_ops/demo/: roi_calculator.py
ecommerce_ops/ecommerce_ops/infra/: redis_task_queue.py  retry.py  task_queue.py
ecommerce_ops/ecommerce_ops/memory/: __init__.py  agent_memory.py
ecommerce_ops/ecommerce_ops/models/: __init__.py  db.py
ecommerce_ops/ecommerce_ops/nginx/: nginx.conf
ecommerce_ops/ecommerce_ops/observability/: __init__.py  trace_models.py
ecommerce_ops/ecommerce_ops/pipeline/: builder.py
ecommerce_ops/ecommerce_ops/scripts/: backup-db.sh  deploy.sh  generate-tls-certs.sh  health-check.sh  restore-db.sh
ecommerce_ops/ecommerce_ops/security/: __init__.py  audit.py  auth.py  hardening.py  models.py  redis_rate_limiter.py  role_manager.py  webhook.py
ecommerce_ops/ecommerce_ops/telemetry/: logger.py
ecommerce_ops/ecommerce_ops/tools/: definitions.py  executor.py  registry.py
ecommerce_ops/graph/: state.py  supervisor.py
ecommerce_ops/infra/: browser_pool.py  circuit_breaker.py  notifications.py  rate_limiter.py  task_queue.py
ecommerce_ops/memory/: cache.py
ecommerce_ops/memory/vector/: __init__.py  persistent_store.py  retrieval.py  sessions.py
ecommerce_ops/models/: __init__.py  db.py  seed.py
ecommerce_ops/observability/: evaluation.py  langfuse_client.py  tracing.py  tracing_otel.py
ecommerce_ops/pipeline/: runner.py
ecommerce_ops/safety/: guardrails.py  safety_rules.py
ecommerce_ops/security/: audit.py  auth.py  hardening.py  role_manager.py
ecommerce_ops/tools/: __init__.py  scraper_tool.py
frontend/: .dockerignore  .env.local  .gitignore  Dockerfile  middleware.ts  next.config.mjs  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.mts  vitest.config.ts
frontend/src/app/: global-error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/src/components/: CommandPalette.tsx  ErrorBoundary.tsx  Skeletons.tsx
frontend/src/lib/: api.ts  auth-store.ts  hooks.ts  useWebSocket.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts
frontend/tests/: ErrorBoundary.test.tsx  api.test.ts  utils.test.ts
monitoring/: alertmanager.yml  alerts.yml  grafana-dashboard.json  prometheus.yml
monitoring/otel/: otelcol.yaml
monitoring/tempo/: tempo.yaml
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: backup-db.sh  check-migrations.sh  deploy.sh  disaster-recovery.sh  export-openapi.sh  generate-sbom.sh  load-test.js  restore-db.sh  security-remaining.sh  security-scan-deep.sh  security-scan.sh  verify-backup.sh
tests/: conftest.py  test_agent_factory.py  test_api.py  test_api_app.py  test_api_extended.py  test_auth.py  test_coverage_boost.py  test_demo.py  test_e2e_integration.py  test_evaluation.py  test_fraud_agent.py  test_guardrails.py  test_infra.py  test_infra_extended.py  test_inventory_agent.py  test_marketing_agent.py  test_memory_models.py  test_message_bus.py  test_middleware.py  test_observability.py  test_observability_api.py  test_performance.py  test_pipeline.py  test_pricing_agent.py  test_reviews_agent.py  test_safety_rules.py  test_security.py  test_security_extended.py  test_supervisor.py  test_supervisor_graph.py  test_tool_registry.py  test_tools.py  test_ws_auth.py
tests/fixtures/: shopify_data.json
tests/load_tests/: locustfile.py
(+86 files in other folders)
