[project]
name = "ecommerce-ops-agent"
version = "0.1.0"
description = "Autonomous operations brain for e-commerce stores"
authors = [
    { name = "Syed Huzaifa", email = "admin@example.com" }
]
dependencies = [
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    "langchain-openai>=0.2.0",
    "openai>=1.50",
    "shopifyapi>=12.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.5",
    "pydantic>=2.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "playwright>=1.48",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "typer>=0.12",
    "httpx>=0.27",
    "langchain-google-genai>=4.2",
    "tenacity>=8.0",
    "aiosqlite>=0.20",
]

[project.scripts]
ops-agent = "ecommerce_ops.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["ecommerce_ops"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101", "B311", "B324"]

[tool.coverage.run]
omit = ["tests/*", "alembic/*"]

[tool.vercel]
entrypoint = "ecommerce_ops.api.app:app"
