[project]
name = "ecommerce-ops-agent"
version = "0.2.0"
description = "Autonomous operations brain for e-commerce stores — AI-powered fraud detection, inventory, pricing, and support"
authors = [
    { name = "Syed Huzaifa", email = "admin@example.com" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
keywords = ["ecommerce", "ai", "agents", "automation", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/Ismail-2001/ecom-ops-automation-system"
Repository = "https://github.com/Ismail-2001/ecom-ops-automation-system"
Issues = "https://github.com/Ismail-2001/ecom-ops-automation-system/issues"
dependencies = [
    "langgraph==1.2.6",
    "langchain-core==1.4.8",
    "langchain-openai==1.3.3",
    "openai==2.44.0",
    "shopifyapi==12.7.0",
    "fastapi==0.115.3",
    "uvicorn[standard]==0.30.6",
    "pydantic-settings==2.5.2",
    "pydantic==2.9.2",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.2",
    "redis==5.0.8",
    "playwright==1.48.0",
    "structlog==24.4.0",
    "prometheus-client==0.21.0",
    "typer==0.12.5",
    "httpx==0.28.1",
    "langchain-google-genai==4.2.0",
    "tenacity==8.5.0",
    "aiosqlite==0.20.0",
]

[project.scripts]
ops-agent = "ecommerce_ops.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["ecommerce_ops"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101", "B311", "B324"]

[tool.coverage.run]
omit = ["tests/*", "alembic/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-v",
    "--tb=short",
    "--cov=ecommerce_ops",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "security: marks tests as security tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.pytest-asyncio]
mode = "auto"

[tool.vercel]
entrypoint = "ecommerce_ops.api.app:app"
